AGR-1876 create download file of gene table on disease page